# dst2root

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
examples/: CovMat.C  MonteCarlo.C  README.md  WvsQ2.C  deltat.C  pvsb.C  samplingFraction.C
examples/proof/: clas12_selector.cxx  clas12_selector.h  run.C
src/: CMakeLists.txt  constants.h  dst2root.cpp  lz4_cmake.txt  test.cpp
src/hipocpp/: CMakeLists.txt  bank.cpp  bank.h  event.cpp  reader.cpp  reader.h  record.cpp  record.h  utils.cpp  utils.h  writer.cpp
